2007-11-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/spectrum/gstspectrum.c:
	Now do the scaling right for real. Also initialize a previously
	uninitialized variable.

2007-11-09  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/metadataparsexmp.c:
	(metadataparse_xmp_tag_list_add),
	(metadataparse_xmp_iter_simple_qual),
	(metadataparse_xmp_iter_simple), (metadataparse_xmp_iter_array),
	(metadataparse_xmp_iter):
	  Extracting more detailed info from XMP.

2007-11-08  Stefan Kost  <ensonic@users.sf.net>

	* gst/equalizer/demo.c:
	  Make default volume a bit less. Improve layout by giving more space to
	  the slider with big-numbers and enable fill.

2007-11-07  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* tests/check/pipelines/gio.c: (GST_START_TEST):
	Require GIO >= 0.1.2 and adjust unit test for an API change.

2007-11-07  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/icles/equalizer-test.c: (do_slider_fiddling):
	Fix gain ranges for the latest equalizer changes.

2007-11-07  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gio/gstgio.h:
	Add macro to check if a stream supports seeking.

	* ext/gio/Makefile.am:
	* ext/gio/gstgiobasesink.c: (gst_gio_base_sink_base_init),
	(gst_gio_base_sink_class_init), (gst_gio_base_sink_init),
	(gst_gio_base_sink_finalize), (gst_gio_base_sink_start),
	(gst_gio_base_sink_stop), (gst_gio_base_sink_unlock),
	(gst_gio_base_sink_unlock_stop), (gst_gio_base_sink_event),
	(gst_gio_base_sink_render), (gst_gio_base_sink_query),
	(gst_gio_base_sink_set_stream):
	* ext/gio/gstgiobasesink.h:
	* ext/gio/gstgiobasesrc.c: (gst_gio_base_src_base_init),
	(gst_gio_base_src_class_init), (gst_gio_base_src_init),
	(gst_gio_base_src_finalize), (gst_gio_base_src_start),
	(gst_gio_base_src_stop), (gst_gio_base_src_get_size),
	(gst_gio_base_src_is_seekable), (gst_gio_base_src_unlock),
	(gst_gio_base_src_unlock_stop), (gst_gio_base_src_check_get_range),