@@ -28,7 +28,7 @@
  * </para>
  * <para>
  * <programlisting>
- * gst-launch filesrc location=song.ogg ! oggdemux ! vorbisdec ! audioconvert ! equalizer-nbands num-bands=15 band5::gain=1.0 ! alsasink
+ * gst-launch filesrc location=song.ogg ! oggdemux ! vorbisdec ! audioconvert ! equalizer-nbands num-bands=15 band5::gain=6.0 ! alsasink
  * </programlisting>
  * This make the equalizer use 15 bands and raises the volume of the 5th band by 6 db.
  * </para>
